try adding a z-index to address predictive text issue

--- a/src/components/Mission.scss
+++ b/src/components/Mission.scss
@@ -13,6 +13,7 @@
       content: "";
       height: 1em;
       display: block;
+      z-index: 1;
     }
 
     .addSpaceRight {
